--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -26,6 +26,8 @@
 
   display: flex;
   align-items: center;
+
+  border-radius: 2px;
 }
 
 .CommentBox footer button:hover{
@@ -34,6 +36,11 @@
 
 .CommentBox footer button svg{
   margin-right: 0.5rem ;
+}
+
+.CommentBox footer button span:before{
+  content: "\2022";
+  padding: 0 0.25rem;
 }
 
 .CommentContent{
