--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,13 @@
   gap: 2rem;
   align-items: flex-start;
 }
+
+/* Quando a tela for menor que 768px*/
+@media (max-width:768px){
+  html {
+    font-size: 87.5%;
+  }
+  .wrapper{
+    grid-template-columns: 1fr;
+  }
+}
